# pdfoutline

./: LICENSE  README.md  pdfoutline.py  pyproject.toml
docs/: contributing.md
src/: README.md
src/pdf_yaml_bookmark/: bkm_to_gs.py  bkm_to_yaml.py  cli.py  common.py  pdfoutline.py  run_gs.py  yaml_to_gs.py
tests/: test_bkm_to_gs.py  test_bkm_to_yaml.py  test_yaml_to_gs.py
